--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -1,78 +1,34 @@
-name: Base Image Build and Release
+name: Build and Publish Docker Image
 
 on:
   push:
-    paths:
-      - "official-templates/base/**"
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
-  build:
-    runs-on: blacksmith-4vcpu-ubuntu-2204
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Clear space to remove unused folders
-        run: |
-          rm -rf /usr/share/dotnet
-          rm -rf /opt/ghc
-          rm -rf "/usr/local/share/boost"
-          rm -rf "$AGENT_TOOLSDIRECTORY"
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
-        uses: useblacksmith/build-push-action@v1.1
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
         with:
-          setup-only: true
-  
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Determine if this is a production build
-        id: build_type
-        run: |
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            echo "is_production=true" >> $GITHUB_OUTPUT
-          else
-            echo "is_production=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Get changed docker-bake.hcl files
-        id: changed_files
-        uses: tj-actions/changed-files@v46
+      - name: Build and push image
+        uses: docker/build-push-action@v5
         with:
-          files: |
-            **/docker-bake.hcl
-
-      - name: Set Environment Variables
-        if: steps.build_type.outputs.is_production != 'true'
-        run: |
-          BRANCH_NAME=$(echo ${GITHUB_REF##refs/heads/} | sed 's/\//-/g')
-          echo "RELEASE=dev-${BRANCH_NAME}" >> $GITHUB_ENV
-
-      - name: Convert changed files to CSV format
-        if: steps.changed_files.outputs.any_changed == 'true'
-        id: changed_files_csv
-        run: |
-          echo "files=${{ steps.changed_files.outputs.all_changed_files }}" | tr ' ' ',' >> $GITHUB_OUTPUT
-
-      - name: Build and push images
-        if: steps.changed_files.outputs.any_changed == 'true'
-        uses: docker/bake-action@v6
-        env:
-          BUILDX_BAKE_ENTITLEMENTS_FS: 0
-        with:
-          source: .
-          files: "official-templates/base/docker-bake.hcl" #${{ steps.changed_files_csv.outputs.files }}
+          context: .
           push: true
-          set: |
-            ${{ steps.build_type.outputs.is_production != 'true' && format('*.args.RELEASE={0}', env.RELEASE) || '' }}
-            *.args.GITHUB_WORKSPACE=${{ github.workspace }}
+          tags: ghcr.io/${{ github.repository }}:latest
