--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -1,8 +1,9 @@
-name: Build and Publish Docker Image
+name: Build and Publish PyTorch Docker Image
 
 on:
   push:
-    branches: [main]
+    paths:
+      - official-templates/pytorch/Dockerfile
 
 jobs:
   build-and-push:
@@ -13,22 +14,23 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GHCR
+      - name: Log in to GitHub Container Registry (GHCR)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./official-templates/pytorch
+          file: ./official-templates/pytorch/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: ghcr.io/${{ github.repository_owner }}/pytorch:latest
