--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -1,4 +1,4 @@
-name: Build and Publish PyTorch Docker Image
+name: Build Docker Image
 
 on:
   push:
@@ -33,4 +33,5 @@ jobs:
           context: ./official-templates/pytorch
           file: ./official-templates/pytorch/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/pytorch:latest
+          tags: ghcr.io/parkourer10/pytorch:latest
+
