--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -1,37 +1,59 @@
-name: Build Docker Image
+name: PyTorch Image Build and Release
 
 on:
   push:
     paths:
-      - official-templates/pytorch/Dockerfile
+      - "official-templates/pytorch/**"
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
+  build:
+    runs-on: blacksmith-4vcpu-ubuntu-2204
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Clear space to remove unused folders
+        run: |
+          rm -rf /usr/share/dotnet
+          rm -rf /opt/ghc
+          rm -rf "/usr/local/share/boost"
+          rm -rf "$AGENT_TOOLSDIRECTORY"
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry (GHCR)
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Determine if this is a production build
+        id: build_type
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "is_production=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_production=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Set release tag for dev builds
+        if: steps.build_type.outputs.is_production != 'true'
+        run: |
+          BRANCH_NAME=$(echo ${GITHUB_REF##refs/heads/} | sed 's/\//-/g')
+          echo "RELEASE=dev-${BRANCH_NAME}" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./official-templates/pytorch
-          file: ./official-templates/pytorch/Dockerfile
+          context: official-templates/pytorch
+          file: official-templates/pytorch/Dockerfile
           push: true
-          tags: ghcr.io/parkourer10/pytorch:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/pytorch:${{ env.RELEASE || 'latest' }}
+
 
